--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- Header -->
   <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 glass-effect">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <a href="#hero" class="text-2xl font-bold highlight">AD</a>
+      <a href="#hero" class="text-2xl font-bold highlight">SM</a>
       <div class="hidden md:flex items-center space-x-8">
         <a href="#about" class="hover:text-highlight transition-colors duration-300">About</a>
         <a href="#projects" class="hover:text-highlight transition-colors duration-300">Projects</a>
@@ -152,7 +152,7 @@
         <div class="md:w-2/5 flex justify-center items-start revealable" style="animation-delay: 300ms;">
           <div class="w-64 h-64 rounded-md overflow-hidden relative group">
             <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&w=400&q=80"
-              alt="Alex Doe" class="absolute w-full h-full object-cover z-10">
+              alt="Sowmya Mannem" class="absolute w-full h-full object-cover z-10">
             <div
               class="absolute w-full h-full border-2 border-highlight top-4 left-4 rounded-md group-hover:top-3 group-hover:left-3 transition-all duration-300">
             </div>
@@ -180,17 +180,16 @@
                     class="w-6 h-6"></i></a>
               </div>
             </div>
-            <h3 class="text-xl font-bold text-gray-200 mb-2">Real-time Vehicle Detection & Tracking</h3>
+            <h3 class="text-xl font-bold text-gray-200 mb-2">Quality check project - Computer vision</h3>
             <p class="text-gray-400 mb-4">
-              A YOLOv8-based system for detecting and tracking vehicles in traffic footage, optimized for performance on
-              edge devices using TensorRT.
+              Computer Vision quality check, Which detects the images and classifies it to its label name. Currently, experimenting with different models measuring the accurary with test set.
             </p>
           </div>
           <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
             <span class="bg-gray-900/50 px-2 py-1 rounded-full">PyTorch</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">OpenCV</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">YOLOv8</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">TensorRT</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">matplotlib</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">linearity & non-linearity models</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Yolov8 & OpenCV</span>
           </div>
         </div>
         <!-- Project 2 -->
@@ -203,43 +202,17 @@
                 <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="github" class="w-6 h-6"></i></a>
               </div>
             </div>
-            <h3 class="text-xl font-bold text-gray-200 mb-2">Medical Image Segmentation</h3>
+            <h3 class="text-xl font-bold text-gray-200 mb-2">News headline classifier</h3>
             <p class="text-gray-400 mb-4">
-              Developed a U-Net based model for segmenting tumors from MRI scans. Achieved high Dice scores through data
-              augmentation and transfer learning.
             </p>
           </div>
           <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">TensorFlow</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Keras</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">U-Net</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Scikit-image</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Amazon sagemaker, S3</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Huggingface model</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">pytorch</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">python</span>
           </div>
         </div>
-        <!-- Project 3 -->
-        <div class="project-card rounded-md p-6 flex flex-col justify-between shadow-lg revealable"
-          style="animation-delay: 300ms;">
-          <div>
-            <div class="flex justify-between items-center mb-4">
-              <i data-lucide="folder-git-2" class="w-10 h-10 text-highlight"></i>
-              <div class="flex space-x-2">
-                <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="github" class="w-6 h-6"></i></a>
-                <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="external-link"
-                    class="w-6 h-6"></i></a>
-              </div>
-            </div>
-            <h3 class="text-xl font-bold text-gray-200 mb-2">Generative Art with StyleGAN</h3>
-            <p class="text-gray-400 mb-4">
-              Trained a StyleGAN2 model on a custom dataset of abstract art to generate novel, high-resolution images.
-              Built a simple web interface with Flask.
-            </p>
-          </div>
-          <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">PyTorch</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">StyleGAN2</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Flask</span>
-            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Docker</span>
-          </div>
         </div>
       </div>
     </section>
@@ -256,34 +229,17 @@
           <ul class="space-y-2">
             <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Python
             </li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>C++
-            </li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>SQL
-            </li>
-          </ul>
-        </div>
+            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2></i>SQL</li>
         <div class="revealable" style="animation-delay: 200ms;">
           <h3 class="font-bold text-lg text-gray-200 mb-3">ML Frameworks</h3>
           <ul class="space-y-2">
             <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>PyTorch
             </li>
             <li class="flex items-center"><i data-lucide="chevron-right"
-                class="w-4 h-4 text-highlight mr-2"></i>TensorFlow / Keras</li>
+                class="w-4 h-4 text-highlight mr-2"></i>Pytorch</li>
             <li class="flex items-center"><i data-lucide="chevron-right"
                 class="w-4 h-4 text-highlight mr-2"></i>Scikit-learn</li>
           </ul>
-        </div>
-        <div class="revealable" style="animation-delay: 300ms;">
-          <h3 class="font-bold text-lg text-gray-200 mb-3">CV Libraries</h3>
-          <ul class="space-y-2">
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>OpenCV
-            </li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Pillow
-            </li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Dlib
-            </li>
-          </ul>
-        </div>
         <div class="revealable" style="animation-delay: 400ms;">
           <h3 class="font-bold text-lg text-gray-200 mb-3">Tools & Platforms</h3>
           <ul class="space-y-2">
