--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
       <h2 class="text-4xl sm:text-6xl md:text-7xl font-bold text-gray-400 mt-2 revealable"
         style="animation-delay: 300ms;">I build intelligent vision systems.</h2>
       <p class="mt-6 max-w-xl text-lg text-gray-400 revealable" style="animation-delay: 400ms;">
-        I'm a Machine Learning Engineer specializing in Computer Vision. I design and build cutting-edge solutions that
-        enable machines to see and understand the world, from real-time object detection to complex image segmentation.
+        An aspiring Machine Learning Engineer with a passion for solving real-world problems through Computer Vision and AI.From working in supply chain operations to building ML projects with Python, PyTorch, and AWS, I thrive on transforming everyday challenges into smart, efficient digital solutions.
       </p>
       <div class="mt-8 flex items-center space-x-4 revealable" style="animation-delay: 500ms;">
         <a href="https://github.com" target="_blank" rel="noopener noreferrer"
@@ -135,15 +134,14 @@
       <div class="flex flex-col md:flex-row gap-8 md:gap-12">
         <div class="md:w-3/5 text-gray-400 space-y-4 text-lg revealable" style="animation-delay: 200ms;">
           <p>
-            Hello! I'm Alex, a passionate engineer with a deep interest in the intersection of artificial intelligence
+            Hello! I'm Sowmya, a passionate engineer with a deep interest in the intersection of artificial intelligence
             and computer vision. My journey began with a fascination for how we could teach computers to interpret
             visual data, leading me to pursue a career dedicated to this field.
           </p>
           <p>
-            I thrive on building robust, scalable, and efficient ML models. I have hands-on experience in the entire
-            machine learning lifecycle, from data collection and preprocessing to model training, deployment, and
-            monitoring. I'm particularly interested in semantic segmentation, generative models, and efficient model
-            deployment for edge devices.
+            I thrive on building robust, scalable, and efficient ML models. From supply chain warehouses to machine learning labs — my journey has been about curiosity and problem solving.
+I started in logistics, where I saw inefficiencies in quality checks, and realized technology like computer vision could make a huge difference. That led me to self-teach programming, graduate from HackYourFuture Copenhagen, and dive into full-stack and ML projects.
+Today, I’m building solutions in AI and Computer Vision, driven by one question: how can tech make real work smarter and more efficient?
           </p>
           <p>
             I'm always eager to learn about new technologies and methodologies in the rapidly evolving field of AI.
