--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
       <h2 class="text-2xl font-bold mb-2 text-highlight revealable">04. What's Next?</h2>
       <h3 class="text-4xl font-bold text-gray-200 mb-4 revealable" style="animation-delay: 100ms;">Get In Touch</h3>
       <p class="text-gray-400 mb-8 revealable" style="animation-delay: 200ms;">
-        I'm currently open to new opportunities and collaborations. Whether you have a question or just want to say hi,
+        I'm currently open to new opportunities. Whether you have a question or just want to say hi,
         my inbox is always open. I'll do my best to get back to you!
       </p>
-      <a href="mailto:alex.doe@email.com"
+      <a href="mailto:sowmyamannemr@gmail.com"
         class="inline-block border border-highlight text-highlight rounded-md px-8 py-4 text-lg hover:bg-highlight/10 transition-colors duration-300 revealable"
         style="animation-delay: 300ms;">
         Say Hello
@@ -273,8 +273,7 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
 
   <!-- Footer -->
   <footer class="py-6 text-center text-gray-400 text-sm">
-    <p>Designed & Built by Alex Doe</p>
-    <p class="mt-1">Inspired by Brittany Chiang's Portfolio</p>
+    <p>Designed & Built by Sowmya Mannem</p>
   </footer>
 
   <script>
