--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
         <!-- Project 1 -->
         <div class="project-card rounded-md p-6 flex flex-col justify-between shadow-lg revealable"
           style="animation-delay: 100ms;">
-          <div>
+          <div
             <div class="flex justify-between items-center mb-4">
               <i data-lucide="folder-git-2" class="w-10 h-10 text-highlight"></i>
               <div class="flex space-x-2">
