--- a/index.html
+++ b/index.html
@@ -167,21 +167,20 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Project 1 -->
-        <div class="project-card rounded-md p-6 flex flex-col justify-between shadow-lg revealable"
-          style="animation-delay: 100ms;">
-            <div class="flex justify-between items-center mb-4">
-              <i data-lucide="folder-git-2" class="w-10 h-10 text-highlight"></i>
-              <div class="flex space-x-2">
-                <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="github" class="w-6 h-6"></i></a>
-                <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="external-link"
-                    class="w-6 h-6"></i></a>
-              </div>
-            </div>
-            <h3 class="text-xl font-bold text-gray-200 mb-2">Quality check project - Computer vision</h3>
-            <p class="text-gray-400 mb-4">
-              Computer Vision quality check, Which detects the images and classifies it to its label name. Currently, experimenting with different models measuring the accurary with test set.
-            </p>
-          </div>
+        <div class="project-card rounded-md p-6 flex flex-col justify-between shadow-lg revealable" style="animation-delay: 100ms;">
+  <div class="flex justify-between items-center mb-4">
+    <i data-lucide="folder-git-2" class="w-10 h-10 text-highlight"></i>
+    <div class="flex space-x-2">
+      <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="github" class="w-6 h-6"></i></a>
+      <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="external-link" class="w-6 h-6"></i></a>
+    </div>
+  </div>
+  <h3 class="text-xl font-bold text-gray-200 mb-2">Quality check project - Computer vision</h3>
+  <p class="text-gray-400 mb-4">
+    Computer Vision quality check, which detects the images and classifies them to their label name. Currently, experimenting with different models measuring the accuracy with test sets.
+  </p>
+</div>
+
           <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
             <span class="bg-gray-900/50 px-2 py-1 rounded-full">PyTorch</span>
             <span class="bg-gray-900/50 px-2 py-1 rounded-full">matplotlib</span>
@@ -211,7 +210,6 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
           </div>
         </div>
         </div>
-      </div>
     </section>
 
     <!-- Skills Section -->
@@ -222,34 +220,32 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
       </h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-8 text-gray-400">
         <div class="revealable" style="animation-delay: 100ms;">
-          <h3 class="font-bold text-lg text-gray-200 mb-3">Languages</h3>
-          <ul class="space-y-2">
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Python
-            </li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2></i>SQL</li>
-        <div class="revealable" style="animation-delay: 200ms;">
-          <h3 class="font-bold text-lg text-gray-200 mb-3">ML Frameworks</h3>
-          <ul class="space-y-2">
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>PyTorch
-            </li>
-            <li class="flex items-center"><i data-lucide="chevron-right"
-                class="w-4 h-4 text-highlight mr-2"></i>Pytorch</li>
-            <li class="flex items-center"><i data-lucide="chevron-right"
-                class="w-4 h-4 text-highlight mr-2"></i>Scikit-learn</li>
-          </ul>
-        <div class="revealable" style="animation-delay: 400ms;">
-          <h3 class="font-bold text-lg text-gray-200 mb-3">Tools & Platforms</h3>
-          <ul class="space-y-2">
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Docker
-            </li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Git &
-              GitHub</li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>AWS
-              (S3, SageMaker)</li>
-            <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>GCP (AI
-              Platform)</li>
-          </ul>
-        </div>
+  <h3 class="font-bold text-lg text-gray-200 mb-3">Languages</h3>
+  <ul class="space-y-2">
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Python</li>
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>SQL</li>
+  </ul>
+</div>
+
+<div class="revealable" style="animation-delay: 200ms;">
+  <h3 class="font-bold text-lg text-gray-200 mb-3">ML Frameworks</h3>
+  <ul class="space-y-2">
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>PyTorch</li>
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Pytorch</li>
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Scikit-learn</li>
+  </ul>
+</div>
+
+<div class="revealable" style="animation-delay: 400ms;">
+  <h3 class="font-bold text-lg text-gray-200 mb-3">Tools & Platforms</h3>
+  <ul class="space-y-2">
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Docker</li>
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>Git & GitHub</li>
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>AWS (S3, SageMaker)</li>
+    <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 text-highlight mr-2"></i>GCP (AI Platform)</li>
+  </ul>
+</div>
+
       </div>
     </section>
 
