--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
             </div>
             <h3 class="text-xl font-bold text-gray-200 mb-2">News headline classifier</h3>
             <p class="text-gray-400 mb-4">
+              It is a multiclass text classification using hugging face model(Distilbert model).
+              The model reads the news headline and categorizes in to Business, Health, Science and entertainment.
             </p>
           </div>
           <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
