--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
         </div>
         <div class="md:w-2/5 flex justify-center items-start revealable" style="animation-delay: 300ms;">
           <div class="w-64 h-64 rounded-md overflow-hidden relative group">
-            <img src="sowmyaphoto-Photoroom.png" width=400 height=80
+            <img src="my_professional_img.jpeg" width=400 height=80
               alt="Sowmya Mannem" class="absolute w-full h-full object-cover z-10">
             <div
               class="absolute w-full h-full border-2 border-highlight top-4 left-4 rounded-md group-hover:top-3 group-hover:left-3 transition-all duration-300">
