--- a/index.html
+++ b/index.html
@@ -213,6 +213,50 @@ Today, I’m building solutions in AI and Computer Vision, driven by one questio
             <span class="bg-gray-900/50 px-2 py-1 rounded-full">python</span>
           </div>
         </div>
+
+
+  <div class="project-card rounded-md p-6 flex flex-col justify-between shadow-lg revealable" style="animation-delay: 100ms;">
+          <div>
+  <div class="flex justify-between items-center mb-4">
+    <i data-lucide="folder-git-2" class="w-10 h-10 text-highlight"></i>
+    <div class="flex space-x-2">
+      <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="github" class="w-6 h-6"></i></a>
+      <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="external-link" class="w-6 h-6"></i></a>
+    </div>
+  </div>
+  <h3 class="text-xl font-bold text-gray-200 mb-2>Monster rolodex</h3>
+  <p class="text-gray-400 mb-4">
+   A search engine for monsters.
+  </p>
+</div>
+
+          <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">React</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Redux</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Styled Component</span>
+          </div>
+        </div>
+
+          <div class="project-card rounded-md p-6 flex flex-col justify-between shadow-lg revealable" style="animation-delay: 100ms;">
+          <div>
+  <div class="flex justify-between items-center mb-4">
+    <i data-lucide="folder-git-2" class="w-10 h-10 text-highlight"></i>
+    <div class="flex space-x-2">
+      <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="github" class="w-6 h-6"></i></a>
+      <a href="#" class="text-gray-400 hover:text-highlight"><i data-lucide="external-link" class="w-6 h-6"></i></a>
+    </div>
+  </div>
+  <h3 class="text-xl font-bold text-gray-200 mb-2>E-crwn Clothing Website</h3>
+  <p class="text-gray-400 mb-4">
+    An e-commerce web app with a smooth userflow to buy there perfect clothing.
+  </p>
+</div>
+
+          <div class="flex flex-wrap text-sm text-gray-400 mt-4 gap-2">
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">React</span>
+            <span class="bg-gray-900/50 px-2 py-1 rounded-full">Redux</span>
+          </div>
+        </div>
         </div>
     </section>
 
